fix:collapse

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-  margin: auto 100px;
+  /* margin: auto 100px; */
 
   
 }
